[package]
name = "to-do-core"
version = "0.1.0"
edition = "2024"

[features]
json-file-storage = ["to-do-dal/json-file"]
default = ["json-file-storage"]

[dependencies]
to-do-dal = {path = "./../dal"}
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"]}